--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "jonkwheeler.styled-components-snippets"
+        "jonkwheeler.styled-components-snippets",
+        "burkeholland.simple-react-snippets"
     ]
 }
